--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "homepage": "https://github.com/hkbu-kennycheng/url2img-web#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^20.8.0"
+    "puppeteer-core": "^20.8.0"
   }
 }
